--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    flex-direction: column;
 }
 
 p {
@@ -17,6 +18,9 @@ main.container {
     width: 900px;
     height: 630px;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 .container .content {
@@ -142,6 +146,24 @@ header a {
     color: #b1b1b1;
 }
 
+.rodape {
+    padding-top: 15px;
+    justify-content: center;
+    display: flex;
+}
+
+footer {
+    background-color: #181818c9;
+    display: flex;
+    justify-content: center;
+    padding: 8px 16px;
+    font-size: 12px; 
+    color: white;
+    font-family: 'Outfit', sans-serif;
+    width: 500px;
+    border-radius: 4px;
+}
+
 @media screen and (max-width: 960px) {
     body {
         background: var(--gradientes-gradiente-hover, linear-gradient(90deg, #9F55FF 0%, #FF46B9 100%));
@@ -153,7 +175,7 @@ header a {
     }
     
     main.container {
-        background-color: #1E1F28;
+        background-color: #1e1f28e9;
         width: 100vw;
         height: 100%;
         border-radius: 0px;
@@ -163,6 +185,7 @@ header a {
         display: flex;
         flex-direction: column;
         gap: 36px;
+        padding: 10px 80px;
     }
 
     .catalogo {
@@ -170,7 +193,12 @@ header a {
         justify-content: center;
         flex-direction: column;
         align-items: center;
+        gap: 20px;
     }   
+    footer {
+        width: 95vw;
+        background-color: #2b2b3756;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -181,18 +209,14 @@ header a {
         justify-content: center;
         gap: 20px;
     }
-}
 
-.container .content {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
+    .container .content {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
 
-  .catalogo {
-    gap: 20px;
-  }
-
-  header button {
-    min-width: 220px;
+    header button {
+        min-width: 220px;
+    }
 }
